--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -27,3 +27,7 @@
 .shifts-list small {
 
 }
+
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    line-height: 42px !important;
+}
