--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -94,3 +94,10 @@
 .late-arrival input {
     width: 100% !important;
 }
+
+.dummy-dashboard {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
